aws/terraform-guide/module-2/main.tf
terraform {
  required_version = ">=0.12"
}

resource "aws_instance" "ec2_example" {
  ami                    = var.aws_ami
  instance_type          = var.instance_type
  key_name               = var.aws_key
  vpc_security_group_ids = [aws_security_group.main.id]
  user_data              = <<-EOF
    #!/bin/sh
    sudo apt-get update
    sudo apt install -y apache2
    sudo systemctl status apache2
    sudo systemctl start apache2
    sudo chown -R $USER:$USER /var/www/html
    sudo echo "<html><body><h1>Hello this is module-2 at instance id  </h1></body></html>" > /var/www/html/index.html
    EOF
}

resource "aws_security_group" "main" {
  name        = "EC2-webserver-SG-2"
  description = "Webserver for EC2 Instances"

  ingress {
    from_port   = 80
    protocol    = "TCP"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    protocol    = "TCP"
    to_port     = 22
    cidr_blocks = ["115.97.103.44/32"]
  }

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_key_pair" "deployer" {
  key_name = var.aws_key
  # Mention public key here
  public_key = ""
}
